--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "author": "Pranav",
   "license": "ISC",
+
+  "engines": {
+    "node": "16.15.0"
+  },
+
   "dependencies": {
     "awesome-qr": "^2.1.5-rc.0",
     "bcryptjs": "^2.4.3",
@@ -17,5 +22,6 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1"
+    
   }
 }
