--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
   },
   "author": "Pranav",
   "license": "ISC",
-
   "engines": {
     "node": "16.15.0"
   },
-
   "dependencies": {
     "awesome-qr": "^2.1.5-rc.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1"
-    
   }
 }
